--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -31,12 +31,7 @@
 .heading-4 {
   @extend %heading;
   font-size: 1.5rem;
-  &--light {
-    color: $color-primary-dark;
-  }
-  &--dark {
-    color: $color-grey-dark-2;
-  }
+  color: $color-secondary;
 }
 
 .btn {
